<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TweetPath</string>
    <string name="login_label">Log in</string>
    <string name="intent_scheme">oauth</string>
    <string name="intent_host">cprest</string>
    <string name="profile_image">Profile Image</string>
    <string name="compose">Compose</string>

    <string name="what_s_happening">What\'s happening?</string>
    <string name="tweet">Tweet</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="cancel_button">Cancel Button</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder_name">Name</string>
    <string name="placeholder_followers">5 Followers</string>
    <string name="placeholder_following">10 Following</string>
    <string name="testuser">\@testuser</string>
    <string name="placeholder_tweet_body">This is a tweet!</string>
    <string name="placeholder_timestamp">5m ago</string>
    <string name="placeholder_tagline">This is a long tagline about myself!</string>
    <string name="no_internet_connectivity">No internet connectivity.</string>

</resources>