<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codepath.apps.tweetpath.fragments.ComposeFragment">

    <ImageView
        android:id="@+id/ivProfileIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_launcher"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="5dp"
        android:contentDescription="@string/profile_icon" />

    <ImageButton
        android:id="@+id/ibCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:background="@android:color/background_light"
        android:contentDescription="@string/cancel_button"
        android:tint="#00aced"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <EditText
        android:id="@+id/etCompose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnTweet"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ivProfileIcon"
        android:layout_margin="10dp"
        android:ems="16"
        android:hint="@string/what_s_happening"
        android:inputType="textLongMessage|textMultiLine"
        android:maxLength="140" />

    <Button
        android:id="@+id/btnTweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/etCompose"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="#00aced"
        android:text="@string/tweet"
        android:textColor="@android:color/white" />

</RelativeLayout>
